#5855 - fix empty page is collapsable

--- a/packages/survey-creator-core/src/components/page.scss
+++ b/packages/survey-creator-core/src/components/page.scss
@@ -157,21 +157,9 @@ svc-page {
      }
   }
 }
-.svc-page__content {
-  &::after {
-    opacity: 0;
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border: 2px $border dashed;
-    margin: -2px;
-    border-radius: calcSize(1.25);
-    box-sizing: content-box;
-    pointer-events: none;
-  }
+.svc-page__content--collapse-onhover, .svc-page__content--collapse-always {
+  outline: 2px transparent dashed;
+  transition: outline-color $creator-transition-duration;
 
   &.svc-page__content--collapsed-drag-over-inside {
     box-shadow: 0 0 0 2px $primary;
@@ -186,10 +174,7 @@ svc-page {
   }
 } 
 .svc-page__content--collapsed {
-  &::after {
-    opacity: 1;
-    transition: opacity $creator-transition-duration;
-  }
+  outline-color: $border;
 }
 
 .svc-creator--mobile {
